--- a/Notebooks/Prueba/prueba_1.ipynb
+++ b/Notebooks/Prueba/prueba_1.ipynb
@@ -247,7 +247,7 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdin",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
       " 10\n"
@@ -325,7 +325,7 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdin",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
       " Forest\n"
@@ -553,8 +553,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "05573ebd-366b-48fb-b198-5719920e5b41",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(2+2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6b9a3c27",
    "metadata": {},
    "outputs": [],
    "source": []
