--- a/Notebooks/Untitled.ipynb
+++ b/Notebooks/Untitled.ipynb
@@ -15,8 +15,10 @@
     }
    ],
    "source": [
+    "'''\n",
     "x = 'Bienvenido a mi blog'\n",
-    "print(x[-9:-15])"
+    "print(x[-9:-15])\n",
+    "'''"
    ]
   },
   {
@@ -26,7 +28,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(x)\n"
+    "# print(x)\n"
    ]
   },
   {
@@ -36,21 +38,16 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      "Introduce un año:  2008\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "El año 2008 es bisiesto.\n"
+     "ename": "SyntaxError",
+     "evalue": "incomplete input (3127036265.py, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  Cell \u001b[1;32mIn[1], line 1\u001b[1;36m\u001b[0m\n\u001b[1;33m    '''\u001b[0m\n\u001b[1;37m    ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m incomplete input\n"
      ]
     }
    ],
    "source": [
+    "'''\n",
     "año = int(input(\"Introduce un año: \"))\n",
     "\n",
     "# Un año es bisiesto si es múltiplo de 4 pero no múltiplo de 100,\n",
@@ -58,7 +55,8 @@
     "if (año % 4 == 0 and año % 100 != 0) or (año % 400 == 0):\n",
     "    print(f\"El año {año} es bisiesto.\")\n",
     "else:\n",
-    "    print(f\"El año {año} no es bisiesto.\")"
+    "    print(f\"El año {año} no es bisiesto.\")\n",
+    "'''"
    ]
   },
   {
@@ -79,10 +77,12 @@
     }
    ],
    "source": [
+    "'''\n",
     "b = 0\n",
     "c = 5\n",
     "a = b or c\n",
-    "a"
+    "a\n",
+    "'''"
    ]
   },
   {
@@ -150,8 +150,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "49355b11-034c-4339-a0bb-91b65f372463",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "{'a': 1, 'e': 2, 'i': 3, 'o': 4, 'u': 5}\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "vocales = 'aeiou'\n",
+    "enum_vocales = {}\n",
+    "\n",
+    "for i, vocal in enumerate(vocales, start = 1):\n",
+    "    enum_vocales[vocal] = i\n",
+    "print()\n",
+    "print(enum_vocales)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5f585b8a-19fd-400c-8d6c-70dce4adfe8c",
    "metadata": {},
    "outputs": [],
    "source": []
