--- a/Notebooks/Practica_25-Recursividad.ipynb
+++ b/Notebooks/Practica_25-Recursividad.ipynb
@@ -3,9 +3,7 @@
   {
    "cell_type": "markdown",
    "id": "84b8a929-e0ac-420c-a8d5-719cd344c7da",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "# Practica 25 - Recursividad. Ejercicios resueltos y propuestos"
    ]
@@ -13,9 +11,7 @@
   {
    "cell_type": "markdown",
    "id": "9dfd5c3f-2002-4067-80bb-79c1c2c38b80",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "## Parte (a): Ejercicios resueltos"
    ]
@@ -207,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 26,
    "id": "8b15e91d-34e4-448f-9a86-0af39ee17f28",
    "metadata": {},
    "outputs": [
@@ -215,27 +211,45 @@
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      "Enter number:  789\n"
+      "Enter number:  4582\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Sum of digits =  24\n"
+      "primer valor de num es 4582\n",
+      "ahora num vale 458\n",
+      "primer valor de num es 458\n",
+      "ahora num vale 45\n",
+      "primer valor de num es 45\n",
+      "ahora num vale 4\n",
+      "primer valor de num es 4\n",
+      "ahora num vale 0\n",
+      "Fin de la recursividad\n",
+      "ahora sum vale 4\n",
+      "ahora sum vale 9\n",
+      "ahora sum vale 17\n",
+      "ahora sum vale 19\n",
+      "Sum of digits =  19\n"
      ]
     }
    ],
    "source": [
     "def rsum(num) : \n",
     "    if num != 0 :\n",
+    "        print(f'primer valor de num es {num}')\n",
     "        digit = num % 10\n",
-    "        num = int(num / 10) \n",
+    "        num = int(num / 10)\n",
+    "        print(f'ahora num vale {num}')\n",
     "        sum = digit + rsum(num)\n",
+    "        print(f'ahora sum vale {sum}')\n",
     "    else :\n",
-    "        return 0 \n",
+    "        print('Fin de la recursividad')\n",
+    "        return 0\n",
     "    return sum\n",
     "\n",
+    "# print(f' fuera del def ahora sum vale {sum}')\n",
     "n = int(input('Enter number: ')) \n",
     "rs = rsum(n)\n",
     "print('Sum of digits = ', rs)\n",
@@ -289,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 41,
    "id": "1b16b7c3-8617-42a6-9459-48220817f7b6",
    "metadata": {},
    "outputs": [
@@ -297,7 +311,7 @@
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      "Enter the number:  2\n"
+      "Enter the number:  8\n"
      ]
     },
     {
@@ -305,7 +319,7 @@
      "output_type": "stream",
      "text": [
       "The binary equivalent is:\n",
-      "10"
+      "1000"
      ]
     }
    ],
@@ -314,9 +328,11 @@
     "\n",
     "def dec_to_binary(n) :\n",
     "    r = n % 2\n",
-    "    n = int(n / 2) \n",
+    "    n = int(n / 2)\n",
+    "    \n",
     "    if n != 0 :\n",
     "        dec_to_binary(n) \n",
+    "    \n",
     "    print(r, end = '')\n",
     "\n",
     "sys.setrecursionlimit(10 ** 6)\n",
@@ -443,9 +459,7 @@
   {
    "cell_type": "markdown",
    "id": "722617f5-4b26-4f78-a3ea-044560132e07",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "## Parte (b): Ejercicios propuestos"
    ]
