--- a/Notebooks/Untitled2.ipynb
+++ b/Notebooks/Untitled2.ipynb
@@ -445,8 +445,162 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "96d4626c-8553-4b13-b46a-da7f8899ed2a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mover disco 1 de A a C\n",
+      "Mover disco 2 de A a B\n",
+      "Mover disco 1 de C a B\n",
+      "Mover disco 3 de A a C\n",
+      "Mover disco 1 de B a A\n",
+      "Mover disco 2 de B a C\n",
+      "Mover disco 1 de A a C\n"
+     ]
+    }
+   ],
+   "source": [
+    "'''def torre_hanoi(n, origen, auxiliar, destino):\n",
+    "    if n == 1:\n",
+    "        print(f'Mover disco 1 de {origen} a {destino}')\n",
+    "    else:\n",
+    "        torre_hanoi(n-1, origen, destino, auxiliar)\n",
+    "        print(f'Mover disco {n} de {origen} a {destino}')\n",
+    "        torre_hanoi(n-1, auxiliar, origen, destino)\n",
+    " \n",
+    "# Ejemplo de uso\n",
+    "n = 3\n",
+    "torre_hanoi(n, 'A', 'B', 'C')\n",
+    "'''"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "dd36f354-88fa-4621-82c4-433e5a700555",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Ingresa un número:  8\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "El equivalente binario es:\n",
+      "Ahora r vale 0\n",
+      "El valor de n es 4\n",
+      "Entrando a la recursión\n",
+      "Ahora r vale 0\n",
+      "El valor de n es 2\n",
+      "Entrando a la recursión\n",
+      "Ahora r vale 0\n",
+      "El valor de n es 1\n",
+      "Entrando a la recursión\n",
+      "1000"
+     ]
+    }
+   ],
+   "source": [
+    "'''\n",
+    "import sys\n",
+    "\n",
+    "def dec_to_binary(n):\n",
+    "    r = n % 2\n",
+    "    n = int(n / 2)\n",
+    "\n",
+    "    if n != 0:\n",
+    "        print(f'Ahora r vale {r}')  # Imprime el valor actual de r\n",
+    "        print(f'El valor de n es {n}')  # Imprime el valor actual de n\n",
+    "        print('Entrando a la recursión')  # Mensaje indicando la recursión\n",
+    "        dec_to_binary(n)\n",
+    "\n",
+    "    print(r, end='')  # Imprime el residuo sin salto de línea\n",
+    "\n",
+    "sys.setrecursionlimit(10 ** 6)\n",
+    "num = int(input('Ingresa un número: '))\n",
+    "print('El equivalente binario es:')\n",
+    "dec_to_binary(num)\n",
+    "'''"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "90b08888-3ec7-4251-9b45-ab8304dfac93",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Ingrese el número:  8\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "El equivalente binario es:\n",
+      "n = 4, r = 0\n",
+      "n = 2, r = 0\n",
+      "n = 1, r = 0\n",
+      "1000"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "''"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import sys  # Importa la biblioteca sys para aumentar el límite de recursión\n",
+    "\n",
+    "def dec_to_binary(n):\n",
+    "  \"\"\"\n",
+    "  Convierte un número decimal a binario recursivamente.\n",
+    "\n",
+    "  Argumentos:\n",
+    "    n (int): El número decimal a convertir.\n",
+    "\n",
+    "  Devuelve:\n",
+    "    str: La representación binaria del número decimal.\n",
+    "  \"\"\"\n",
+    "  r = n % 2  # Residuo de la división por 2\n",
+    "  n = int(n / 2)  # Cociente de la división por 2\n",
+    "\n",
+    "  if n != 0:\n",
+    "    print(f\"n = {n}, r = {r}\")  # Imprime los valores de n y r\n",
+    "    dec_to_binary(n)  # Llamada recursiva\n",
+    "\n",
+    "  print(r, end='')  # Imprime el dígito binario actual\n",
+    "  return \"\"\n",
+    "\n",
+    "sys.setrecursionlimit(10 ** 6)  # Aumenta el límite de recursión\n",
+    "\n",
+    "num = int(input('Ingrese el número: '))\n",
+    "print('El equivalente binario es:')\n",
+    "dec_to_binary(num)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c81cb333-9761-4c54-86f8-572a43436e21",
    "metadata": {},
    "outputs": [],
    "source": []
