--- a/Notebooks/Ficheros_p.ipynb
+++ b/Notebooks/Ficheros_p.ipynb
@@ -435,7 +435,15 @@
    "id": "0a8bbcb4-6259-41d4-acc2-c49c9ed40701",
    "metadata": {},
    "source": [
-    "**Ejercicios resueltos**"
+    "# **Ejercicios resueltos**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "00b033ed-ef4c-437c-9e7b-7c48bf02867a",
+   "metadata": {},
+   "source": [
+    "### Para el siguiente par ejercicios debes explicar los códigos línea por línea y plantear otro problema similar que deberás resolver por tí mismo. "
    ]
   },
   {
@@ -443,7 +451,7 @@
    "id": "39c68318-a0f1-491f-8dd1-2c372f4fb629",
    "metadata": {},
    "source": [
-    "1- En este ejercicio deberás crear un script llamado personas.py que lea los datos de un fichero de texto, que transforme cada fila en un diccionario y lo añada a una lista llamada personas. Luego recorre las personas de la lista y para cada una muestra de forma amigable todos sus campos"
+    "1- En este ejercicio deberás crear un script llamado **personas.py** que lea los datos de un fichero de texto, que transforme cada fila del fichero de texto en un diccionario y lo añada a una lista de diccionarios llamado personas. Luego recorre las personas de la lista y para cada una muestra de forma amigable todos sus campos"
    ]
   },
   {
@@ -451,7 +459,7 @@
    "id": "f51d4149-2648-4f68-ba01-d42012c061d8",
    "metadata": {},
    "source": [
-    "El fichero de texto se denominará personas.txt y tendrá el siguiente contenido en texto plano (créalo previamente):"
+    "El fichero de texto se denominará **personas.txt** y tendrá el siguiente contenido en texto plano (créalo previamente):"
    ]
   },
   {
@@ -472,7 +480,7 @@
    "id": "9ca27d95-8258-451e-84ed-55946fa5c15d",
    "metadata": {},
    "source": [
-    "Los campos del diccionario serán por orden: id, nombre, apellido y nacimiento."
+    "Los campos del diccionario serán por orden: **id, nombre, apellido y nacimiento.**"
    ]
   },
   {
@@ -494,11 +502,42 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "61309243-5313-4128-95d2-f2f6db2f7bd9",
+   "metadata": {},
+   "source": [
+    "La solución del ejercicio se encuentra en los ficheros personas.txt y personas.py. Explique en el propio fichero personas.py o en una celda de este notebook el código linea mediante comentarios o celdas de texto"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "649aba3e-7d4a-46f4-aa38-684b8848e4d4",
+   "metadata": {},
+   "source": [
+    "2 - Escribir una función que pida un número entero entre 1 y 10 y guarde en un fichero con el nombre tabla-n.txt la tabla de multiplicar de ese número, donde n es el número introducido."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "03c88226-d540-4263-9f1d-783882d16b7d",
+   "id": "1054f2ae-4266-44ca-a475-ac824a7d3ffa",
    "metadata": {},
    "outputs": [],
+   "source": [
+    "'''\n",
+    "n = int(input('Introduce un número entero entre 1 y 10: '))\n",
+    "nombre_fichero = 'tabla-' + str(n) + '.txt'\n",
+    "f = open(nombre_fichero, 'w')\n",
+    "for i in range(1, 11):\n",
+    "    f.write(str(n) + ' x ' + str(i) + ' = ' + str(n * i) + '\\n')\n",
+    "f.close()\n",
+    "'''"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "593af3b3-a7f6-4e35-b079-b6af7ae9a0c1",
+   "metadata": {},
    "source": []
   }
  ],
