--- a/Notebooks/Ficheros_repaso.ipynb
+++ b/Notebooks/Ficheros_repaso.ipynb
@@ -31,7 +31,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from io import open # Desde Jupyter Notebooks no es necesario importar open\n",
+    "from io import open # Desde Jupyter Notebooks no es necesario escribir esto. Se hace la importación si vas a trabajar desde VSCODE\n",
     "\n",
     "texto = \"Una línea con texto\\nOtra línea con texto\"\n",
     "\n",
